--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -144,12 +144,12 @@
 // .hero-sm {
 //   display: none;
 // }
-.hero-lg {
-  width: 100%;
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-}
+// .hero-lg {
+//   width: 100%;
+//   position: relative;
+//   display: flex;
+//   align-items: flex-end;
+// }
 
 // HOME MAIN
 .blog-teasers {
