--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -236,9 +236,40 @@ main {
 //     height: 100%;
 //   }
 // }
-// .hero-lg {
-//   display: none;
-// }
+.hero-lg {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+}
+#cruiseShip1 {
+  width: 100%;
+  background-image: url('../images/cruiseShip1.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#cruiseShip2 {
+  width: 100%;
+  background-image: url('../images/cruiseShip2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#cruiseShip2 {
+  width: 100%;
+  background-image: url('../images/cruiseShip3.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#cruiseShip2 {
+  width: 100%;
+  background-image: url('../images/cruiseShip4.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 .blog-articles {
   width: 95%;
