--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -238,12 +238,10 @@ main {
 // }
 .hero-lg {
   width: 100%;
-  position: relative;
-  display: flex;
-  align-items: flex-end;
 }
 #cruiseShip1 {
   width: 100%;
+  height: 350px;
   background-image: url('../images/cruiseShip1.jpg');
   background-size: cover;
   background-position: center;
@@ -251,6 +249,7 @@ main {
 }
 #cruiseShip2 {
   width: 100%;
+  height: 350px;
   background-image: url('../images/cruiseShip2.jpg');
   background-size: cover;
   background-position: center;
@@ -258,6 +257,7 @@ main {
 }
 #cruiseShip2 {
   width: 100%;
+  height: 350px;
   background-image: url('../images/cruiseShip3.jpg');
   background-size: cover;
   background-position: center;
@@ -265,6 +265,7 @@ main {
 }
 #cruiseShip2 {
   width: 100%;
+  height: 350px;
   background-image: url('../images/cruiseShip4.jpg');
   background-size: cover;
   background-position: center;
