--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -567,13 +567,11 @@ main {
 
 .hero-lg {
   width: 100%;
-  position: relative;
-  display: flex;
-  align-items: flex-end;
 }
 
 #cruiseShip1 {
   width: 100%;
+  height: 350px;
   background-image: url("../images/cruiseShip1.jpg");
   background-size: cover;
   background-position: center;
@@ -582,6 +580,7 @@ main {
 
 #cruiseShip2 {
   width: 100%;
+  height: 350px;
   background-image: url("../images/cruiseShip2.jpg");
   background-size: cover;
   background-position: center;
@@ -590,6 +589,7 @@ main {
 
 #cruiseShip2 {
   width: 100%;
+  height: 350px;
   background-image: url("../images/cruiseShip3.jpg");
   background-size: cover;
   background-position: center;
@@ -598,6 +598,7 @@ main {
 
 #cruiseShip2 {
   width: 100%;
+  height: 350px;
   background-image: url("../images/cruiseShip4.jpg");
   background-size: cover;
   background-position: center;
