--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -141,6 +141,21 @@
   display: none;
 }
 
+#smCruiseShip1,
+#smCruiseShip2,
+#smCruiseShip3,
+#smCruiseShip4 {
+  display: none;
+}
+
+#lgCruiseShip1,
+#lgCruiseShip2,
+#lgCruiseShip3,
+#lgCruiseShip4 {
+  width: 100%;
+  height: 100%;
+}
+
 // .hero-sm {
 //   display: none;
 // }
