--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -153,7 +153,10 @@
 #lgCruiseShip3,
 #lgCruiseShip4 {
   width: 100%;
-  height: 100%;
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 // .hero-sm {
