--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -241,16 +241,16 @@ main {
   position: relative;
   display: flex;
   align-items: flex-end;
-  div {
-    width: 100%;
-  }
 }
 #smCruiseShip1,
 #smCruiseShip2,
 #smCruiseShip3,
 #smCruiseShip4 {
   width: 100%;
-  height: 100%;
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 #lgCruiseShip1,
