--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -571,14 +571,17 @@ main {
   display: flex;
   align-items: flex-end;
 }
-.hero-lg div {
-  width: 100%;
-}
 
 #smCruiseShip1,
 #smCruiseShip2,
 #smCruiseShip3,
 #smCruiseShip4 {
+  width: 100%;
+}
+#smCruiseShip1 img,
+#smCruiseShip2 img,
+#smCruiseShip3 img,
+#smCruiseShip4 img {
   width: 100%;
   height: 100%;
 }
@@ -1069,6 +1072,12 @@ footer .copyright {
 #lgCruiseShip2,
 #lgCruiseShip3,
 #lgCruiseShip4 {
+    width: 100%;
+  }
+  #lgCruiseShip1 img,
+#lgCruiseShip2 img,
+#lgCruiseShip3 img,
+#lgCruiseShip4 img {
     width: 100%;
     height: 100%;
   }
