reverted slick slider back to how it was before

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -141,15 +141,15 @@
   display: none;
 }
 
-// .hero-sm {
-//   display: none;
-// }
-// .hero-lg {
-//   width: 100%;
-//   position: relative;
-//   display: flex;
-//   align-items: flex-end;
-// }
+.hero-sm {
+  display: none;
+}
+.hero-lg {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+}
 
 // HOME MAIN
 .blog-teasers {
