--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -226,21 +226,18 @@ main {
   margin-bottom: 30px;
 }
 
-// .hero-sm {
-//   width: 100%;
-//   position: relative;
-//   display: flex;
-//   align-items: flex-end;
-//   img {
-//     width: 100%;
-//     height: 100%;
-//   }
-// }
-.hero-lg {
+.hero-sm {
   width: 100%;
   position: relative;
   display: flex;
   align-items: flex-end;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+.hero-lg {
+  display: none;
 }
 
 .blog-articles {
