--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -565,11 +565,19 @@ main {
   margin-bottom: 30px;
 }
 
-.hero-lg {
+.hero-sm {
   width: 100%;
   position: relative;
   display: flex;
   align-items: flex-end;
+}
+.hero-sm img {
+  width: 100%;
+  height: 100%;
+}
+
+.hero-lg {
+  display: none;
 }
 
 .blog-articles {
@@ -1038,6 +1046,17 @@ footer .copyright {
 
   #sm-nav {
     display: none;
+  }
+
+  .hero-sm {
+    display: none;
+  }
+
+  .hero-lg {
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
   }
 
   .blog-teasers {
