--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -565,19 +565,15 @@ main {
   margin-bottom: 30px;
 }
 
-.hero-sm {
+.hero-slider {
   width: 100%;
   position: relative;
   display: flex;
   align-items: flex-end;
 }
-.hero-sm img {
+.hero-slider picture img {
   width: 100%;
   height: 100%;
-}
-
-.hero-lg {
-  display: none;
 }
 
 .blog-articles {
@@ -1046,17 +1042,6 @@ footer .copyright {
 
   #sm-nav {
     display: none;
-  }
-
-  .hero-sm {
-    display: none;
-  }
-
-  .hero-lg {
-    width: 100%;
-    position: relative;
-    display: flex;
-    align-items: flex-end;
   }
 
   .blog-teasers {
