added styling for contact form

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -211,6 +211,11 @@
   width: 50%;
 }
 
+// CONTACT FORM
+.wpcf7 {
+  width: 410px;
+}
+
 // FOOTER
 .footer-info {
   grid-template-columns: repeat(2, 1fr);
