--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -453,6 +453,26 @@ main {
   }
 }
 
+// CONTACT FORM
+.wpcf7 {
+  width: 100%;
+}
+.wpcf7-form {
+  width: 95%;
+}
+.wpcf7-form-control-wrap {
+  width: 100%;
+}
+.wpcf7-form-control {
+  width: 100%;
+  height: 40px;
+}
+.wpcf7-submit {
+  background: $prime;
+  color: white;
+  font-family: $font;
+}
+
 // FOOTER
 footer {
   width: 100vw;
