--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -792,6 +792,29 @@ main {
   height: auto;
 }
 
+.wpcf7 {
+  width: 100%;
+}
+
+.wpcf7-form {
+  width: 95%;
+}
+
+.wpcf7-form-control-wrap {
+  width: 100%;
+}
+
+.wpcf7-form-control {
+  width: 100%;
+  height: 40px;
+}
+
+.wpcf7-submit {
+  background: #197bbd;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
+
 footer {
   width: 100vw;
   background: #bbbbbb;
@@ -1107,6 +1130,10 @@ footer .copyright {
 
   .book-form {
     width: 50%;
+  }
+
+  .wpcf7 {
+    width: 410px;
   }
 
   .footer-info {
