--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -456,6 +456,9 @@ main {
 // CONTACT FORM
 .wpcf7 {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .wpcf7-form {
   width: 95%;
