--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -469,7 +469,11 @@ main {
 .wpcf7-form-control {
   width: 100%;
   height: 40px;
+  border: solid 1px $grey;
   border-radius: 5px;
+}
+.wpcf7-textarea {
+  height: 100px;
 }
 .wpcf7-submit {
   background: $prime;
