--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -810,7 +810,12 @@ main {
 .wpcf7-form-control {
   width: 100%;
   height: 40px;
+  border: solid 1px #bbbbbb;
   border-radius: 5px;
+}
+
+.wpcf7-textarea {
+  height: 100px;
 }
 
 .wpcf7-submit {
