--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -457,6 +457,7 @@ main {
 .wpcf7 {
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
