--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -795,6 +795,7 @@ main {
 .wpcf7 {
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
