--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -488,6 +488,22 @@ main {
   }
 }
 
+// NEWS
+.news-content {
+  display: flex;
+  align-items: center;
+}
+.date-post {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid 1px $second;
+  padding: 5px;
+}
+.post-content-text {
+  margin-left: 10px;
+}
+
 // FOOTER
 footer {
   width: 100vw;
