--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -831,6 +831,23 @@ main {
   background: #2797e2;
 }
 
+.news-content {
+  display: flex;
+  align-items: center;
+}
+
+.date-post {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid 1px #3a506b;
+  padding: 5px;
+}
+
+.post-content-text {
+  margin-left: 10px;
+}
+
 footer {
   width: 100vw;
   background: #bbbbbb;
