--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -494,11 +494,20 @@ main {
   align-items: center;
 }
 .date-post {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid 1px $second;
-  padding: 5px;
+  border: solid 2px $second;
+  border-radius: 5px;
+  padding: 0px 10px;
+  h2 {
+    margin: 0;
+    margin-bottom: 10px;
+  }
+  p {
+    margin: 0;
+  }
 }
 .post-content-text {
   margin-left: 10px;
