--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -837,11 +837,20 @@ main {
 }
 
 .date-post {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid 1px #3a506b;
-  padding: 5px;
+  border: solid 2px #3a506b;
+  border-radius: 5px;
+  padding: 0px 10px;
+}
+.date-post h2 {
+  margin: 0;
+  margin-bottom: 10px;
+}
+.date-post p {
+  margin: 0;
 }
 
 .post-content-text {
