--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -489,12 +489,17 @@ main {
 }
 
 // NEWS
+.wpnawfree-plugin {
+  width: 100%;
+}
 .news-content {
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .date-post {
-  height: 100%;
+  width: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
