--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -831,13 +831,19 @@ main {
   background: #2797e2;
 }
 
+.wpnawfree-plugin {
+  width: 100%;
+}
+
 .news-content {
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .date-post {
-  height: 100%;
+  width: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
