styling news page

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -833,6 +833,20 @@ main {
 
 .wpnawfree-plugin {
   width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.news {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.news-inner-wrap-view {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .news-content {
