--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -491,6 +491,18 @@ main {
 // NEWS
 .wpnawfree-plugin {
   width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.news {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.news-inner-wrap-view {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .news-content {
   width: 100%;
