--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
@@ -87,3 +87,8 @@ main {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(1, auto);
 }
+
+// NEWS
+.news-content {
+  width: 100%;
+}
