--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -857,12 +857,9 @@ main {
 }
 
 .date-post {
-  width: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid 2px #3a506b;
-  border-radius: 5px;
   padding: 5px 10px;
 }
 .date-post h2 {
@@ -875,6 +872,8 @@ main {
 
 .post-content-text {
   margin-left: 10px;
+  padding-left: 10px;
+  border-left: solid 1px #bbbbbb;
 }
 .post-content-text h3 {
   margin: 0;
