edited read me link

--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -537,11 +537,10 @@ main {
   }
 }
 .news-more-link {
-  text-align: right;
-  width: 100px;
-  height: 35px;
-  background: $prime;
-  color: white;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 // FOOTER
