--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -216,6 +216,20 @@
   width: 410px;
 }
 
+// NEWS
+.news-wrap {
+  float: right;
+  margin: 0px 20px 5px 5px;
+  width: 50%;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+.news-text {
+  margin: 4px 4px 4px 20px;
+}
+
 // FOOTER
 .footer-info {
   grid-template-columns: repeat(2, 1fr);
