--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -537,6 +537,22 @@ main {
   }
 }
 
+.news-wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+.news-text {
+  p {
+    font-family: $font;
+  }
+}
+
 // FOOTER
 footer {
   width: 100vw;
