--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -884,6 +884,21 @@ main {
   margin: 0;
 }
 
+.news-wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.news-wrap img {
+  width: 100%;
+  height: 100%;
+}
+
+.news-text p {
+  font-family: "Montserrat", sans-serif;
+}
+
 footer {
   width: 100vw;
   background: #bbbbbb;
@@ -1203,6 +1218,20 @@ footer .copyright {
 
   .wpcf7 {
     width: 410px;
+  }
+
+  .news-wrap {
+    float: right;
+    margin: 0px 20px 5px 5px;
+    width: 50%;
+  }
+  .news-wrap img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .news-text {
+    margin: 4px 4px 4px 20px;
   }
 
   .footer-info {
