--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -538,13 +538,14 @@ main {
 }
 
 .news-wrap {
-  width: 100%;
+  width: 95%;
   img {
     width: 100%;
-    height: 100%;
+    height: auto;
   }
 }
 .news-text {
+  width: 95%;
   p {
     font-family: $font;
   }
