--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -885,13 +885,16 @@ main {
 }
 
 .news-wrap {
-  width: 100%;
+  width: 95%;
 }
 .news-wrap img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
+.news-text {
+  width: 95%;
+}
 .news-text p {
   font-family: "Montserrat", sans-serif;
 }
@@ -1327,6 +1330,14 @@ footer .copyright {
   }
 
   .news-content {
+    width: 100%;
+  }
+
+  .news-wrap {
+    width: 100%;
+  }
+
+  .news-text {
     width: 100%;
   }
 }
