--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -500,6 +500,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 }
 .news-inner-wrap-view {
   width: 100%;
@@ -514,11 +515,13 @@ main {
 }
 .date-post {
   width: 80px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 5px 10px;
-  h2 {
+  background: $grey h2 {
     margin: 0;
     margin-bottom: 10px;
   }
@@ -527,7 +530,6 @@ main {
   }
 }
 .post-content-text {
-  margin-left: 10px;
   padding-left: 10px;
   border-left: solid 1px $grey;
   h3 {
