--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -843,6 +843,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 }
 
 .news-inner-wrap-view {
@@ -860,21 +861,21 @@ main {
 
 .date-post {
   width: 80px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 5px 10px;
-}
-.date-post h2 {
-  margin: 0;
-  margin-bottom: 10px;
+  background: #bbbbbb h2;
+  background-margin: 0;
+  background-margin-bottom: 10px;
 }
 .date-post p {
   margin: 0;
 }
 
 .post-content-text {
-  margin-left: 10px;
   padding-left: 10px;
   border-left: solid 1px #bbbbbb;
 }
