--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -521,7 +521,8 @@ main {
   align-items: center;
   justify-content: center;
   padding: 5px 10px;
-  background: $grey h2 {
+  background: $grey;
+  h2 {
     margin: 0;
     margin-bottom: 10px;
   }
