--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -559,11 +559,12 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 120px;
-  height: 35px;
+  width: 100px;
+  height: 30px;
   background: $prime;
   color: white;
   font-family: $font;
+  text-decoration: none;
 }
 
 // FOOTER
