--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -514,7 +514,7 @@ main {
   justify-content: center;
 }
 .date-post {
-  width: 80px;
+  width: 5%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -531,6 +531,7 @@ main {
   }
 }
 .post-content-text {
+  width: 95%;
   padding-left: 10px;
   border-left: solid 1px $grey;
   h3 {
