--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -860,7 +860,7 @@ main {
 }
 
 .date-post {
-  width: 80px;
+  width: 5%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -878,6 +878,7 @@ main {
 }
 
 .post-content-text {
+  width: 95%;
   padding-left: 10px;
   border-left: solid 1px #bbbbbb;
 }
