--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
@@ -92,10 +92,15 @@ main {
 .news-content {
   width: 100%;
 }
-// NEWS
 .news-wrap {
   width: 100%;
 }
 .news-text {
   width: 100%;
+}
+.date-post {
+  width: 10%;
+}
+.post-content-text {
+  width: 90%;
 }
