--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -228,6 +228,12 @@
 .news-text {
   margin-right: 4px;
 }
+.date-post {
+  width: 15%;
+}
+.post-content-text {
+  width: 85%;
+}
 
 // FOOTER
 .footer-info {
