--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -145,6 +145,11 @@
 .blog-teasers {
   grid-template-columns: repeat(3, 1fr);
 }
+main {
+  h1 {
+    font-size: 32px;
+  }
+}
 
 // ABOUT US MAIN
 .about-us {
