--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -224,6 +224,10 @@ main {
   justify-content: flex-start;
   align-items: center;
   margin-bottom: 30px;
+  h1 {
+    font-family: $font;
+    font-size: 20pt;
+  }
 }
 
 .hero-slider {
