--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -796,6 +796,16 @@ main h1 {
   height: auto;
 }
 
+.contact-wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-text {
+  width: 95%;
+}
+
 .wpcf7 {
   width: 100%;
   display: flex;
