--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -217,6 +217,15 @@ main {
 }
 
 // CONTACT FORM
+.contact-wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.contact-text {
+  width: 100%;
+}
 .wpcf7 {
   width: 410px;
 }
