--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -218,13 +218,14 @@ main {
 
 // CONTACT FORM
 .contact-wrap {
-  width: 100%;
+  width: 95%;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 .contact-text {
   width: 50%;
+  margin-right: 20px;
 }
 .wpcf7 {
   width: 410px;
