--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -1253,7 +1253,7 @@ footer .copyright {
   }
 
   .contact-wrap {
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -1261,6 +1261,7 @@ footer .copyright {
 
   .contact-text {
     width: 50%;
+    margin-right: 20px;
   }
 
   .wpcf7 {
