--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_medium.scss
@@ -221,7 +221,7 @@ main {
   width: 95%;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
 }
 .contact-text {
   width: 50%;
