--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_large.scss
@@ -88,6 +88,11 @@ main {
   grid-template-rows: repeat(1, auto);
 }
 
+// CONTACT
+.contact-wrap {
+  width: 100%;
+}
+
 // NEWS
 .news-content {
   width: 100%;
