--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -1385,6 +1385,10 @@ footer .copyright {
     grid-template-rows: repeat(1, auto);
   }
 
+  .contact-wrap {
+    width: 100%;
+  }
+
   .news-content {
     width: 100%;
   }
