--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -806,6 +806,10 @@ main h1 {
 .contact-text {
   width: 95%;
 }
+.contact-text img {
+  width: 100%;
+  height: 100%;
+}
 
 .wpcf7 {
   width: 100%;
