--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -947,6 +947,11 @@ main h1 {
   background: #bbbbbb;
 }
 
+.odd,
+.even {
+  padding: 7.5px 5px;
+}
+
 footer {
   width: 100vw;
   background: #bbbbbb;
