--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -587,6 +587,7 @@ main {
 // CRUISE TABLE
 .cruise-table {
   width: 100%;
+  margin-top: 30px;
   thead {
     background: $prime;
     color: white;
