--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -943,14 +943,15 @@ main h1 {
   background: #197bbd;
   color: white;
 }
+.cruise-table thead tr {
+  padding: 10px 0px;
+}
+.cruise-table tbody tr {
+  padding: 7.5px 5px;
+}
 
 .even {
   background: #bbbbbb;
-}
-
-.odd,
-.even {
-  padding: 7.5px 5px;
 }
 
 footer {
