--- a/new-cruise-site/wp-content/themes/newCruise/styles/_small.scss
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/_small.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 /* Prevent adjustments of font size when orientation changes  */
 html {
   -webkit-text-size-adjust: 100%;
@@ -24,25 +26,27 @@ body {
 #menu-main-menu {
   list-style: none;
   padding-left: 0;
+  display: flex;
+  align-items: center;
   width: 100%;
+  height: 100%;
   margin: 0;
   li {
     width: 100%;
     padding: 20px 0px 20px 0px;
-    border-bottom: solid 1px white;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     a {
       margin-left: 20px;
       text-decoration: none;
-      color: white;
+      color: $second;
       font-size: 14pt;
     }
   }
 }
 .active {
-  border-bottom: solid 1px white;
+  border-bottom: solid 1px $prime;
 }
 
 /*----- Clearfix: Force an Element not to collapse -----*/
