--- a/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
@@ -5,6 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -362,13 +363,15 @@ body {
 #menu-main-menu {
   list-style: none;
   padding-left: 0;
+  display: flex;
+  align-items: center;
   width: 100%;
+  height: 100%;
   margin: 0;
 }
 #menu-main-menu li {
   width: 100%;
   padding: 20px 0px 20px 0px;
-  border-bottom: solid 1px white;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -376,12 +379,12 @@ body {
 #menu-main-menu li a {
   margin-left: 20px;
   text-decoration: none;
-  color: white;
+  color: #3a506b;
   font-size: 14pt;
 }
 
 .active {
-  border-bottom: solid 1px white;
+  border-bottom: solid 1px #197bbd;
 }
 
 /*----- Clearfix: Force an Element not to collapse -----*/
