--- a/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
@@ -383,8 +383,8 @@ body {
   font-size: 14pt;
 }
 
-.active {
-  border-bottom: solid 1px #197bbd;
+.current-menu-item {
+  border-bottom: solid 1px #3a506b;
 }
 
 /*----- Clearfix: Force an Element not to collapse -----*/
