--- a/new-cruise-site/wp-content/themes/newCruise/styles/_small.scss
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/_small.scss
@@ -46,7 +46,9 @@ body {
   }
 }
 .current-menu-item {
-  border-bottom: solid 1px $second;
+  a {
+    border-bottom: solid 1px $second;
+  }
 }
 
 /*----- Clearfix: Force an Element not to collapse -----*/
