--- a/new-cruise-site/wp-content/themes/newCruise/styles/_small.scss
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/_small.scss
@@ -51,6 +51,12 @@ body {
   }
 }
 
+.social-icon {
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+}
+
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
   content: '';
