--- a/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
@@ -387,6 +387,12 @@ body {
   border-bottom: solid 1px #3a506b;
 }
 
+.social-icon {
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+}
+
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
   content: "";
