--- a/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
@@ -360,6 +360,13 @@ body {
   margin: 0;
 }
 
+main {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #menu-main-menu {
   list-style: none;
   padding-left: 0;
