--- a/new-cruise-site/wp-content/themes/newCruise/styles/_small.scss
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/_small.scss
@@ -34,7 +34,7 @@ main {
   list-style: none;
   padding-left: 0;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   margin: 0;
