--- a/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/styles.css
@@ -371,7 +371,7 @@ main {
   list-style: none;
   padding-left: 0;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -411,6 +411,10 @@ main {
 @media only screen and (min-width: 75rem) {
   .boot-el {
     width: 50%;
+  }
+
+  #menu-main-menu {
+    flex-direction: row;
   }
 }
 /* end of media query */
