styles large width

--- a/new-cruise-site/wp-content/themes/newCruise/styles/styles.scss
+++ b/new-cruise-site/wp-content/themes/newCruise/styles/styles.scss
@@ -1,11 +1,11 @@
-@import "./normalize";
+@import './normalize';
 
-@import "./small";
+@import './small';
 
 @media only screen and (min-width: 48rem) {
-    @import "./medium";
+  @import './medium';
 } /* end of media query */
 
-@media only screen and (min-width: 75rem) {
-    @import "./large";
+@media only screen and (min-width: 62rem) {
+  @import './large';
 } /* end of media query */
