updated name of theme

--- a/cool-collareds-store/wp-content/themes/coolCollards/style.css
+++ b/cool-collareds-store/wp-content/themes/coolCollards/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: New Cruise
+Theme Name: Cool Store
 Theme URI: http://myplace.com
 Description: My first responsive template
 Author: Austin Wright
